--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.2.4"
+    "mongoose": "^7.2.4",
+    "mongoose-autopopulate": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
