--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "mjml": "^4.14.1",
     "mongoose": "^7.2.4",
     "mongoose-autopopulate": "^1.0.1"
   },
