--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.40.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -33,7 +34,9 @@
     "jsonwebtoken": "^9.0.1",
     "mjml": "^4.14.1",
     "mongoose": "^7.2.4",
-    "mongoose-autopopulate": "^1.0.1"
+    "mongoose-autopopulate": "^1.0.1",
+    "multer": "1.4.5-lts.1",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
